--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+
+      <textarea id="w3review" name="w3review" rows="4" cols="50" readonly>
+At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
+</textarea>
+    </main>
     <footer></footer>
   </body>
 </html>
