--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   <body>
     <header></header>
     <main>
-
-      <textarea id="w3review" name="w3review" rows="4" cols="50" readonly>
-At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
-</textarea>
+      <textarea class="input" placeholder="Enter text here" />
     </main>
     <footer></footer>
   </body>
