--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header></header>
     <main>
-      <textarea class="input" placeholder="Enter text here" />
+      <p id="text">This is static text</p>
     </main>
     <footer></footer>
   </body>
