--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <header></header>
     <main>
       <p id="text">This is static text</p>
+      <script src="index.lua" version="legacy">
     </main>
     <footer></footer>
   </body>
