--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header></header>
     <main>
-      <p id="text">This is static text</p>
+      <div id="text" contenteditable="true">Edit this text</div>
       <script src="index.lua" version="legacy">
     </main>
     <footer></footer>
