--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <body>
     <header></header>
     <main>
-      <div id="text" contenteditable="true">Edit this text</div>
-      <script src="index.lua" version="legacy">
+Hello World :3
     </main>
     <footer></footer>
   </body>
